// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots of selectors/profile matches the last stored run of getProfile 1`] = `
Object {
  "meta": Object {
    "abi": "",
    "appBuildID": "",
    "categories": Array [
      Object {
        "color": "transparent",
        "name": "Idle",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "grey",
        "name": "Other",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "purple",
        "name": "Layout",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "yellow",
        "name": "JavaScript",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "orange",
        "name": "GC / CC",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "lightblue",
        "name": "Network",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "green",
        "name": "Graphics",
        "subcategories": Array [
          "Other",
        ],
      },
      Object {
        "color": "blue",
        "name": "DOM",
        "subcategories": Array [
          "Other",
        ],
      },
    ],
    "configuration": Object {
      "activeBrowsingContextID": 123123,
      "capacity": 1000000,
      "features": Array [],
      "threads": Array [],
    },
    "extensions": Object {
      "baseURL": Array [],
      "id": Array [],
      "length": 0,
      "name": Array [],
    },
    "interval": 1,
    "logicalCPUs": 0,
    "misc": "",
    "oscpu": "",
    "physicalCPUs": 0,
    "platform": "",
    "preprocessedProfileVersion": 32,
    "processType": 0,
    "product": "Firefox",
    "sourceURL": "",
    "stackwalk": 0,
    "startTime": 0,
    "symbolicated": true,
    "toolkit": "",
    "version": 21,
  },
  "pages": Array [
    Object {
      "browsingContextID": 123123,
      "embedderInnerWindowID": 0,
      "innerWindowID": 2,
      "url": "https://developer.mozilla.org/en-US/",
    },
  ],
  "threads": Array [
    Object {
      "frameTable": Object {
        "address": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
        "category": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "column": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "func": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "implementation": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "innerWindowID": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          2,
          0,
          0,
        ],
        "length": 9,
        "line": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "optimizations": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "subcategory": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
      },
      "funcTable": Object {
        "address": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
        "columnNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "fileName": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "isJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "length": 9,
        "lineNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "relevantForJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "resource": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
      },
      "libs": Array [],
      "markers": Object {
        "category": Array [],
        "data": Array [],
        "endTime": Array [],
        "length": 0,
        "name": Array [],
        "phase": Array [],
        "startTime": Array [],
      },
      "name": "Thread with samples",
      "pausedRanges": Array [],
      "pid": 0,
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "resourceTable": Object {
        "host": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "eventDelay": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          10,
          15,
          25,
          30,
          40,
          50,
          0,
        ],
        "length": 57,
        "stack": Array [
          4,
          4,
          4,
          6,
          6,
          6,
          8,
          8,
          8,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          16,
          17,
          18,
          19,
          20,
          21,
          22,
          23,
          24,
          25,
          26,
          27,
          28,
          29,
          30,
          31,
          32,
          33,
          34,
          35,
          36,
          37,
          38,
          39,
          40,
          41,
          42,
          43,
          44,
          45,
          46,
          47,
          48,
          49,
          50,
          51,
          52,
          53,
          54,
          55,
          56,
        ],
        "weight": null,
        "weightType": "samples",
      },
      "stackTable": Object {
        "category": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "frame": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "length": 9,
        "prefix": Array [
          null,
          0,
          1,
          2,
          3,
          2,
          5,
          1,
          7,
        ],
        "subcategory": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
      },
      "stringTable": UniqueStringArray {
        "_array": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
          "G",
          "H",
          "I",
        ],
        "_stringToIndex": Map {
          "A" => 0,
          "B" => 1,
          "C" => 2,
          "D" => 3,
          "E" => 4,
          "F" => 5,
          "G" => 6,
          "H" => 7,
          "I" => 8,
        },
      },
      "tid": 0,
      "unregisterTime": null,
    },
    Object {
      "frameTable": Object {
        "address": Array [],
        "category": Array [],
        "column": Array [],
        "func": Array [],
        "implementation": Array [],
        "innerWindowID": Array [],
        "length": 0,
        "line": Array [],
        "optimizations": Array [],
        "subcategory": Array [],
      },
      "funcTable": Object {
        "address": Array [],
        "columnNumber": Array [],
        "fileName": Array [],
        "isJS": Array [],
        "length": 0,
        "lineNumber": Array [],
        "name": Array [],
        "relevantForJS": Array [],
        "resource": Array [],
      },
      "libs": Array [],
      "markers": Object {
        "category": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "data": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          Object {
            "URI": "https://mozilla.org",
            "endTime": 6.5,
            "id": 6,
            "pri": 0,
            "startTime": 6,
            "status": "STATUS_START",
            "type": "Network",
          },
          Object {
            "URI": "https://mozilla.org",
            "contentType": "text/html",
            "endTime": 7,
            "id": 6,
            "pri": 0,
            "startTime": 6.5,
            "status": "STATUS_STOP",
            "type": "Network",
          },
          Object {
            "URI": "https://mozilla.org",
            "endTime": 7.5,
            "id": 7,
            "pri": 0,
            "startTime": 7,
            "status": "STATUS_START",
            "type": "Network",
          },
          Object {
            "URI": "https://mozilla.org",
            "contentType": "text/html",
            "endTime": 8,
            "id": 7,
            "pri": 0,
            "startTime": 7.5,
            "status": "STATUS_STOP",
            "type": "Network",
          },
        ],
        "endTime": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          6.5,
          7,
          7.5,
          8,
        ],
        "length": 10,
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          6,
          7,
          7,
        ],
        "phase": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          1,
          1,
          1,
          1,
        ],
        "startTime": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          6.5,
          7,
          7.5,
        ],
      },
      "name": "Thread with markers",
      "pausedRanges": Array [],
      "pid": 0,
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "resourceTable": Object {
        "host": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "eventDelay": Array [],
        "length": 0,
        "stack": Array [],
        "time": Array [],
        "weight": null,
        "weightType": "samples",
      },
      "stackTable": Object {
        "category": Array [],
        "frame": Array [],
        "length": 0,
        "prefix": Array [],
        "subcategory": Array [],
      },
      "stringTable": UniqueStringArray {
        "_array": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
          "Load 6: https://mozilla.org",
          "Load 7: https://mozilla.org",
        ],
        "_stringToIndex": Map {
          "A" => 0,
          "B" => 1,
          "C" => 2,
          "D" => 3,
          "E" => 4,
          "F" => 5,
          "Load 6: https://mozilla.org" => 6,
          "Load 7: https://mozilla.org" => 7,
        },
      },
      "tid": 0,
      "unregisterTime": null,
    },
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of getThreads 1`] = `
Array [
  Object {
    "frameTable": Object {
      "address": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
      "category": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "column": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "func": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "implementation": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "innerWindowID": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        0,
        0,
      ],
      "length": 9,
      "line": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "optimizations": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "subcategory": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    "funcTable": Object {
      "address": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
      "columnNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "fileName": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "isJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "length": 9,
      "lineNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "relevantForJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "resource": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
    },
    "libs": Array [],
    "markers": Object {
      "category": Array [],
      "data": Array [],
      "endTime": Array [],
      "length": 0,
      "name": Array [],
      "phase": Array [],
      "startTime": Array [],
    },
    "name": "Thread with samples",
    "pausedRanges": Array [],
    "pid": 0,
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "eventDelay": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        10,
        15,
        25,
        30,
        40,
        50,
        0,
      ],
      "length": 57,
      "stack": Array [
        4,
        4,
        4,
        6,
        6,
        6,
        8,
        8,
        8,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
        20,
        21,
        22,
        23,
        24,
        25,
        26,
        27,
        28,
        29,
        30,
        31,
        32,
        33,
        34,
        35,
        36,
        37,
        38,
        39,
        40,
        41,
        42,
        43,
        44,
        45,
        46,
        47,
        48,
        49,
        50,
        51,
        52,
        53,
        54,
        55,
        56,
      ],
      "weight": null,
      "weightType": "samples",
    },
    "stackTable": Object {
      "category": Array [
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
      ],
      "frame": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "length": 9,
      "prefix": Array [
        null,
        0,
        1,
        2,
        3,
        2,
        5,
        1,
        7,
      ],
      "subcategory": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    "stringTable": UniqueStringArray {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "G",
        "H",
        "I",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
        "G" => 6,
        "H" => 7,
        "I" => 8,
      },
    },
    "tid": 0,
    "unregisterTime": null,
  },
  Object {
    "frameTable": Object {
      "address": Array [],
      "category": Array [],
      "column": Array [],
      "func": Array [],
      "implementation": Array [],
      "innerWindowID": Array [],
      "length": 0,
      "line": Array [],
      "optimizations": Array [],
      "subcategory": Array [],
    },
    "funcTable": Object {
      "address": Array [],
      "columnNumber": Array [],
      "fileName": Array [],
      "isJS": Array [],
      "length": 0,
      "lineNumber": Array [],
      "name": Array [],
      "relevantForJS": Array [],
      "resource": Array [],
    },
    "libs": Array [],
    "markers": Object {
      "category": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "data": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        Object {
          "URI": "https://mozilla.org",
          "endTime": 6.5,
          "id": 6,
          "pri": 0,
          "startTime": 6,
          "status": "STATUS_START",
          "type": "Network",
        },
        Object {
          "URI": "https://mozilla.org",
          "contentType": "text/html",
          "endTime": 7,
          "id": 6,
          "pri": 0,
          "startTime": 6.5,
          "status": "STATUS_STOP",
          "type": "Network",
        },
        Object {
          "URI": "https://mozilla.org",
          "endTime": 7.5,
          "id": 7,
          "pri": 0,
          "startTime": 7,
          "status": "STATUS_START",
          "type": "Network",
        },
        Object {
          "URI": "https://mozilla.org",
          "contentType": "text/html",
          "endTime": 8,
          "id": 7,
          "pri": 0,
          "startTime": 7.5,
          "status": "STATUS_STOP",
          "type": "Network",
        },
      ],
      "endTime": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        6.5,
        7,
        7.5,
        8,
      ],
      "length": 10,
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        6,
        7,
        7,
      ],
      "phase": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        1,
        1,
      ],
      "startTime": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        6.5,
        7,
        7.5,
      ],
    },
    "name": "Thread with markers",
    "pausedRanges": Array [],
    "pid": 0,
    "processShutdownTime": null,
    "processStartupTime": 0,
    "processType": "default",
    "registerTime": 0,
    "resourceTable": Object {
      "host": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "eventDelay": Array [],
      "length": 0,
      "stack": Array [],
      "time": Array [],
      "weight": null,
      "weightType": "samples",
    },
    "stackTable": Object {
      "category": Array [],
      "frame": Array [],
      "length": 0,
      "prefix": Array [],
      "subcategory": Array [],
    },
    "stringTable": UniqueStringArray {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "Load 6: https://mozilla.org",
        "Load 7: https://mozilla.org",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
        "Load 6: https://mozilla.org" => 6,
        "Load 7: https://mozilla.org" => 7,
      },
    },
    "tid": 0,
    "unregisterTime": null,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getCommittedRangeFilteredMarkerIndexes 1`] = `
Array [
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "D",
    "start": 3,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "E",
    "start": 4,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "F",
    "start": 5,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 7,
      "fetchStart": 6.5,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 7,
    "name": "Load 6: https://mozilla.org",
    "start": 6,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 8,
      "fetchStart": 7.5,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 8,
    "name": "Load 7: https://mozilla.org",
    "start": 7,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getFullMarkerListIndexes 1`] = `
Array [
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "A",
    "start": 0,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "B",
    "start": 1,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "C",
    "start": 2,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "D",
    "start": 3,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "E",
    "start": 4,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "F",
    "start": 5,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 7,
      "fetchStart": 6.5,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 7,
    "name": "Load 6: https://mozilla.org",
    "start": 6,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 8,
      "fetchStart": 7.5,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 8,
    "name": "Load 7: https://mozilla.org",
    "start": 7,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getMarkerChartTimingAndBuckets 1`] = `
Array [
  "Idle",
  Object {
    "bucket": "Idle",
    "end": Array [
      3,
    ],
    "index": Array [
      3,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "D",
    "start": Array [
      3,
    ],
  },
  Object {
    "bucket": "Idle",
    "end": Array [
      4,
    ],
    "index": Array [
      4,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "E",
    "start": Array [
      4,
    ],
  },
  Object {
    "bucket": "Idle",
    "end": Array [
      5,
    ],
    "index": Array [
      5,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "F",
    "start": Array [
      5,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getSearchFilteredMarkerIndexes 1`] = `
Array [
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "D",
    "start": 3,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "E",
    "start": 4,
  },
  Object {
    "category": 0,
    "data": null,
    "end": null,
    "name": "F",
    "start": 5,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 7,
      "fetchStart": 6.5,
      "id": 6,
      "pri": 0,
      "startTime": 6,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 7,
    "name": "Load 6: https://mozilla.org",
    "start": 6,
  },
  Object {
    "category": 0,
    "data": Object {
      "URI": "https://mozilla.org",
      "cause": undefined,
      "contentType": "text/html",
      "endTime": 8,
      "fetchStart": 7.5,
      "id": 7,
      "pri": 0,
      "startTime": 7,
      "status": "STATUS_STOP",
      "type": "Network",
    },
    "end": 8,
    "name": "Load 7: https://mozilla.org",
    "start": 7,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of markerThreadSelectors.getTimelineOverviewMarkerIndexes 1`] = `Array []`;

exports[`snapshots of selectors/profile matches the last stored run of selectedNodeSelectors.getTimingsForSidebar 1`] = `
Object {
  "forFunc": Object {
    "selfTime": Object {
      "breakdownByCategory": null,
      "breakdownByImplementation": null,
      "value": 0,
    },
    "totalTime": Object {
      "breakdownByCategory": Array [
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 2,
          "subcategoryBreakdown": Array [
            2,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
      ],
      "breakdownByImplementation": Object {
        "native": 2,
      },
      "value": 2,
    },
  },
  "forPath": Object {
    "selfTime": Object {
      "breakdownByCategory": null,
      "breakdownByImplementation": null,
      "value": 0,
    },
    "totalTime": Object {
      "breakdownByCategory": Array [
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 2,
          "subcategoryBreakdown": Array [
            2,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
        Object {
          "entireCategoryValue": 0,
          "subcategoryBreakdown": Array [
            0,
          ],
        },
      ],
      "breakdownByImplementation": Object {
        "native": 2,
      },
      "value": 2,
    },
  },
  "rootTime": 2,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCallNodeInfo 1`] = `
Object {
  "callNodeTable": Object {
    "category": Int32Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "depth": Array [
      0,
      1,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "innerWindowID": Float64Array [
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 8,
    "prefix": Int32Array [
      -1,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
    "subcategory": Int32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stackIndexToCallNodeIndex": Uint32Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getCallTree 1`] = `
CallTree {
  "_callNodeChildCount": Uint32Array [
    1,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "_callNodeSummary": Object {
    "self": Float32Array [
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "total": Float32Array [
      2,
      2,
      0,
      0,
      2,
      2,
      0,
      0,
    ],
  },
  "_callNodeTable": Object {
    "category": Int32Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "depth": Array [
      0,
      1,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "innerWindowID": Float64Array [
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 8,
    "prefix": Int32Array [
      -1,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
    "subcategory": Int32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "_categories": Array [
    Object {
      "color": "transparent",
      "name": "Idle",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "grey",
      "name": "Other",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "purple",
      "name": "Layout",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "yellow",
      "name": "JavaScript",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "orange",
      "name": "GC / CC",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "lightblue",
      "name": "Network",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "green",
      "name": "Graphics",
      "subcategories": Array [
        "Other",
      ],
    },
    Object {
      "color": "blue",
      "name": "DOM",
      "subcategories": Array [
        "Other",
      ],
    },
  ],
  "_children": Array [],
  "_displayDataByIndex": Map {},
  "_funcTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "_interval": 1,
  "_isHighPrecision": false,
  "_jsOnly": false,
  "_resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "_rootCount": 1,
  "_rootTotalSummary": 2,
  "_stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "_weightType": "samples",
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
    ],
    "length": 4,
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getFlameGraphTiming 1`] = `
Array [
  Object {
    "callNode": Array [
      0,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      1,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      4,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      5,
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfRelative": Array [
      1,
    ],
    "start": Array [
      0,
    ],
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getJankMarkersForHeader 1`] = `
Array [
  Object {
    "category": 1,
    "data": Object {
      "type": "Jank",
    },
    "end": 55,
    "name": "Jank",
    "start": 5,
  },
]
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getPreviewFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
    ],
    "length": 2,
    "stack": Array [
      5,
      5,
    ],
    "time": Array [
      4,
      5,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getRangeAndTransformFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
    ],
    "length": 4,
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getRangeFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
    ],
    "length": 4,
    "stack": Array [
      6,
      6,
      6,
      8,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      2,
      3,
      2,
      5,
      1,
      7,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getTabFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "column": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "innerWindowID": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      2,
      0,
      0,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "funcTable": Object {
    "address": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
    "columnNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "relevantForJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "category": Array [],
    "data": Array [],
    "endTime": Array [],
    "length": 0,
    "name": Array [],
    "phase": Array [],
    "startTime": Array [],
  },
  "name": "Thread with samples",
  "pausedRanges": Array [],
  "pid": 0,
  "processShutdownTime": null,
  "processStartupTime": 0,
  "processType": "default",
  "registerTime": 0,
  "resourceTable": Object {
    "host": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "eventDelay": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      10,
      15,
      25,
      30,
      40,
      50,
      0,
    ],
    "length": 57,
    "stack": Array [
      null,
      null,
      null,
      6,
      6,
      6,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
      17,
      18,
      19,
      20,
      21,
      22,
      23,
      24,
      25,
      26,
      27,
      28,
      29,
      30,
      31,
      32,
      33,
      34,
      35,
      36,
      37,
      38,
      39,
      40,
      41,
      42,
      43,
      44,
      45,
      46,
      47,
      48,
      49,
      50,
      51,
      52,
      53,
      54,
      55,
      56,
    ],
    "weight": null,
    "weightType": "samples",
  },
  "stackTable": Object {
    "category": Array [
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
      1,
    ],
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      2,
      3,
      2,
      5,
      1,
      7,
    ],
    "subcategory": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
  "unregisterTime": null,
}
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getThreadProcessDetails 1`] = `
"thread: \\"Thread with samples\\" (0)
process: \\"default\\" (0)"
`;

exports[`snapshots of selectors/profile matches the last stored run of selectedThreadSelector.getViewOptions 1`] = `
Object {
  "expandedCallNodePaths": PathSet {
    "_table": Map {
      "0" => Array [
        0,
      ],
      "0-1" => Array [
        0,
        1,
      ],
    },
  },
  "selectedCallNodePath": Array [
    0,
    1,
  ],
  "selectedMarker": 1,
}
`;
